--- a/recipes/templates/recipes/pages/recipe-view.html
+++ b/recipes/templates/recipes/pages/recipe-view.html
@@ -1,4 +1,4 @@
-{% include 'recipes/partials/head.html' %}
+{% extends 'global/base.html' %}
 
 {% block content %}
 <div class="main-content main-content-detail container">
